Lua Hide and Seek mission (#750)
* HideAndSeek changes

* Moved Lua timer callback from Entity to MapInstance

* Added hideAndSeek script

* Removed unneeded changes

* Update Entity.cpp

* Adjusted lua timer

Timer stores start time. Sends start, current and difference in seconds.

* Requested Changes

* Requested changes

I added in some a changes Nemerle mentioned in Discord as well.
Mainly removing a few items from MapClientSession.

* Chat messages changes

This should remove the memory leak from npcSendMessage

--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(target_CPP
     ${CMAKE_CURRENT_SOURCE_DIR}/CharacterClass.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/CharacterData.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/CharacterHelpers.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/CharacterStatistics.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/CommonNetStructures.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Contact.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Costume.cpp
@@ -71,6 +72,7 @@ SET(target_INCLUDE
     ${CMAKE_CURRENT_SOURCE_DIR}/CharacterClass.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CharacterData.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CharacterHelpers.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/CharacterStatistics.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Costume.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
     ${CMAKE_CURRENT_SOURCE_DIR}/EntityHelpers.h
