Split log's category's into individual files
- Add ability to 'combine' or 'split' log files 
- If splitting: For each QLoggingCategory a separate, dated log file is created. 
- If combining: A single 'all', dated log file is created
- Above 2 items controlled using a new 'combine_logs' setting in settings.cfg under 'Logging'. Also added to settings_template.cfg
- Add functionality to SEGSAdmin to control this setting.
- Add functionality to SEGSAdmin to 'Purge Logs'. This will delete any log files with a date < today. Convenience function to allow easy clean up of old log files.
- Some SEGSAdmin UI tidy ups, some issues had arisen following previous updates
- Code indentation fix in SettingsDialog.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,3 +159,4 @@ set(MAPNAMES
 foreach(MAPDIR ${MAPNAMES})
   file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
 endforeach(MAPDIR)
+file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/logs)
