--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -89,6 +89,7 @@ starting_level          = 1
 starting_inf            = 0
 
 [Logging]
+combine_logs        = false
 log_generic         = *.debug=true\nqt.*.debug=false
 log_logging         = false
 log_keybinds        = false
