Map Menu works to change to indoor mission maps now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,9 +155,21 @@ set(MAPNAMES
   Trial_03_01
   Trial_04_01 Trial_04_02
   Trial_05_01
-  Mission_Sewers
-  Mission_Caves
+  Mission_5th_Column
   Mission_Abandoned_Office
+  Mission_Abandoned_Warehouse
+  Mission_Caves
+  Mission_COT
+  Mission_Office
+  Mission_Outdoor_City
+  Mission_Outdoor_Forest
+  Mission_Outdoor_Industrial
+  Mission_Outdoor_Missions
+  Mission_Outdoor_Ruined
+  Mission_Sewers
+  Mission_Tech
+  Mission_unique
+  Mission_Warehouse
   )
 foreach(MAPDIR ${MAPNAMES})
   file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
