--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -22,6 +22,16 @@
 #
 ##############################################################
 
+# Proposed FolderPaths Config Group
+#[FolderPaths]
+#data        = data
+#maps        = DefaultMapInstances
+#templates   = default_setup
+#logs        = logs
+#scripts     = scripts
+#unit_tests  = utilities\unit_tests
+#utilities   = utilities
+
 [AdminServer]
 AccountDatabase\db_driver   = QSQLITE
 AccountDatabase\db_host     = 127.0.0.1
