--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -48,7 +48,7 @@ max_character_slots     = 8
 [MapServer]  
 listen_addr             = 127.0.0.1:7003
 location_addr           = 127.0.0.1:7003
-maps                    = DefaultMapInstances
+maps                    = maps
 player_fade_in          = 380.0
 motd_timer              = 120.0
 costume_slot_unlocks    = "19, 29, 39, 49"
