Add support for configuration file version Add a new Metadata group to settings.cfg with a new key config_version set to 1.0.0 Add a new value ConfigVersion to version.h set at 1.0.0 Add check for mismatched or missing config_version in SegsAdmin Add prompt for user to recreate settings.cfg on version mismatch in SegsAdmin Add config version display to SegsAdmin settings window
Move DB Variables to version.h
Update methods to use new location.

Remove stdint.h test

Changed DB Versions type to int and removed debug messages

Fixes for PR Acceptance
Replace config_version == NULL with config_version.isEmpty()
Add comment // MetaData to .endgroup()
Changed all instances of Metadata to MetaData

Missed one MetaData comment

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -23,6 +23,9 @@
 #
 ##############################################################
 
+[MetaData]
+config_version     = "1.0.0"
+
 [AdminServer]
 AccountDatabase\db_driver   = QSQLITE
 AccountDatabase\db_host     = 127.0.0.1
