--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -24,7 +24,7 @@
 ##############################################################
 
 [MetaData]
-config_version     = "1.0.0"
+config_version     = 1
 
 [AdminServer]
 AccountDatabase\db_driver   = QSQLITE
