--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -27,6 +27,7 @@ target_link_libraries(GameServer INTERFACE SEGS_Components gameData )
 
 add_subdirectory(FriendshipService)
 add_subdirectory(EmailService)
+add_subdirectory(SettingsService)
 
 target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService )
 target_link_libraries(GameServer INTERFACE SEGS_Components gameData)
