Solved linking problem for ClientOptionService and added two more functions to it

--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -29,7 +29,7 @@ add_subdirectory(FriendshipService)
 add_subdirectory(EmailService)
 add_subdirectory(ClientOptionService)
 
-target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService)
+target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService ClientOptionService)
 target_link_libraries(GameServer INTERFACE SEGS_Components gameData)
 
 if(ENABLE_TESTS)
