--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -28,8 +28,10 @@ target_link_libraries(GameServer INTERFACE SEGS_Components gameData )
 add_subdirectory(FriendshipService)
 add_subdirectory(EmailService)
 add_subdirectory(ClientOptionService)
+add_subdirectory(LocationService)
+add_subdirectory(CharacterService)
 
-target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService ClientOptionService)
+target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService ClientOptionService LocationService CharacterService)
 target_link_libraries(GameServer INTERFACE SEGS_Components gameData)
 
 if(ENABLE_TESTS)
