--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,3 +161,41 @@ foreach(MAPDIR ${MAPNAMES})
   file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
 endforeach(MAPDIR)
 file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/logs)
+
+# for version and revision info. Derived from https://github.com/dolphin-emu/dolphin/blob/master/CMakeLists.txt#L132
+find_package(Git)
+if(GIT_FOUND)
+  # defines SEGS_REVISION
+  execute_process(WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
+      OUTPUT_VARIABLE SEGS_REVISION
+      OUTPUT_STRIP_TRAILING_WHITESPACE)
+  # defines SEGS_DESCRIPTION
+  execute_process(WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} COMMAND ${GIT_EXECUTABLE} describe --always --long --dirty
+      OUTPUT_VARIABLE SEGS_DESCRIPTION
+      OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+  # remove hash (and trailing "-0" if needed) from description
+  string(REGEX REPLACE "(-0)?-[^-]+((-dirty)?)$" "\\2" SEGS_DESCRIPTION "${SEGS_DESCRIPTION}")
+
+  # defines SEGS_BRANCH
+  execute_process(WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
+      OUTPUT_VARIABLE SEGS_BRANCH
+      OUTPUT_STRIP_TRAILING_WHITESPACE)
+endif()
+
+# version number
+set(SEGS_VERSION_MAJOR "0")
+set(SEGS_VERSION_MINOR "6")
+if(SEGS_BRANCH STREQUAL "master")
+  set(SEGS_VERSION_PATCH "1")
+else()
+  set(SEGS_VERSION_PATCH ${SEGS_REVISION})
+endif()
+
+# If SEGS is not built from a Git repository, default the version info to
+# reasonable values.
+if(NOT SEGS_REVISION)
+  set(SEGS_DESCRIBE "${SEGS_VERSION_MAJOR}.${SEGS_VERSION_MINOR}")
+  set(SEGS_REVISION "${SEGS_DESCRIPTION} (no further info)")
+  set(SEGS_BRANCH "develop")
+endif()
