Solved the vector of unique pointers issue and added Transaction and ZoneTransferService (build should succeed but untested)
- Expanded ServiceToClientData to include which MessageChannel to send to
- Added a lot of constructors for ServiceToClientData, depending on how you wish to use it
- Placed on_recv_costume_change and on_recv_selected_titles to CharacterService

--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -30,8 +30,11 @@ add_subdirectory(EmailService)
 add_subdirectory(ClientOptionService)
 add_subdirectory(LocationService)
 add_subdirectory(CharacterService)
+add_subdirectory(TransactionService)
+add_subdirectory(ZoneTransferService)
 
-target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService ClientOptionService LocationService CharacterService)
+target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService ClientOptionService LocationService)
+target_link_libraries(GameServer PUBLIC Qt5::Core CharacterService TransactionService ZoneTransferService)
 target_link_libraries(GameServer INTERFACE SEGS_Components gameData)
 
 if(ENABLE_TESTS)
