--- a/Projects/CoX/Servers/GameServer/SuperGroupService/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/SuperGroupService/CMakeLists.txt
@@ -10,15 +10,15 @@ SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
 SET (target_SOURCES
-${target_CPP}
-${target_INCLUDE}
+    ${target_CPP}
+    ${target_INCLUDE}
 )
 add_handler(SuperGroupService ${target_SOURCES})
 target_link_libraries(SuperGroupService PUBLIC Qt5::Core gameData)
 target_link_libraries(SuperGroupService INTERFACE SEGS_Components)
 
 if(ENABLE_TESTS)
-    add_subdirectory(UnitTests)
+    #add_subdirectory(UnitTests)
 endif()
 
 # Retain directory structure in visual studio
