Scripting engine refactor (#793)
* Exposing encounters to scripts

* Corrected Build Error / Moved types into ScriptingEngine_RegisterTypes

* Corrected Logging error / Exposes enemy spawn groups to scripting engine

* Build fix?

* Added pragma once back

* Requested changes

* Added missing updates to ScriptingEngine MapInstance pointer

* Added #include Array

* Another include array test

* Split #includes out in to each cpp file

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -1,8 +1,4 @@
-if(ENABLE_SCRIPTING_ENGINE)
-    set(SCRIPTING_CPP ScriptingEngine.cpp)
-else()
-    set(SCRIPTING_CPP ScriptingEngine_Null.cpp)
-endif()
+
 SET(target_CPP
     CritterGenerator.cpp
     DataHelpers.cpp
@@ -22,7 +18,6 @@ SET(target_CPP
     NetFxHelpers.cpp
     SlashCommand.cpp
     WorldSimulation.cpp
-    ${SCRIPTING_CPP}
 )
 SET(target_INCLUDE
     CritterGenerator.h
@@ -40,7 +35,6 @@ SET(target_INCLUDE
     MessageHelpers.h
     NetCommandManager.h
     NetFxHelpers.h
-    ScriptingEngine.h
     SlashCommand.h
     WorldSimulation.h
 )
@@ -58,10 +52,10 @@ target_link_libraries(MapServer PUBLIC CRUDP_Protocol common_runtime)
 target_link_libraries(MapServer PUBLIC Qt5::Core)
 target_link_libraries(MapServer PUBLIC gameData)
 
-if(ENABLE_SCRIPTING_ENGINE)
-    target_compile_definitions(MapServer PUBLIC -DSCRIPTING_ENABLED=1)
-    target_link_libraries(MapServer INTERFACE lua_IMP sol2_IMP)
-endif()
+add_subdirectory(ScriptingEngine)
+
+target_link_libraries(MapServer PUBLIC Qt5::Core ScriptingEngine)
+
 if(ENABLE_TESTS)
     add_subdirectory(UnitTests)
 endif()
