WIP FX system implementation
Not finished, not working, ... just not. :)
DONE:
- Implemented ECS'like FXSystem
- FXSystem has minimal logic for handling effect states
- NetFx creation from an Effect
- HandleBasedStorage knows how to convert iterator to a storage handle.
- added commented out ReferenceCounting wrapper for handle.
- GameDataStore knows how to return FxInfo * based on an effect name.

TODO:
- expose relevant FXSystem namespace members to LUA
- hide NetFx functions from LUA
- generate NetFx from active FXSystem entries,attach based on visibility
-

--- a/Projects/CoX/Common/Runtime/CMakeLists.txt
+++ b/Projects/CoX/Common/Runtime/CMakeLists.txt
@@ -11,6 +11,8 @@ set(COMMON_RUNTIME_SRC
     SceneGraph.cpp
     Texture.cpp
     Texture.h
+    Systems/FXSystem.cpp
+    Systems/FXSystem.h
 )
 add_library(common_runtime STATIC ${COMMON_RUNTIME_SRC})
 add_dependencies(common_runtime gameData)
@@ -24,8 +26,8 @@ target_link_libraries(common_runtime INTERFACE gameData )
 #set_property(TARGET segs_runtime APPEND PROPERTY INCLUDE_DIRECTORIES "$<TARGET_PROPERTY:cereal_IMP,INTERFACE_INCLUDE_DIRECTORIES>")
 
 # Retain directory structure in visual studio
-get_target_property(TARGET_SOURCES common_runtime SOURCES) 
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+get_target_property(TARGET_SOURCES common_runtime SOURCES)
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES})
 set_target_properties (common_runtime PROPERTIES
     FOLDER Projects/CoX/Common
 )
