WIP FX system implementation
Not finished, not working, ... just not. :)

DONE:
- Implemented ECS'like FXSystem
- FXSystem has minimal logic for handling effect state 'evolution'
- NetFx creation from an Effect
- HandleBasedStorage knows how to convert iterator to a storage handle.
- added commented out ReferenceCounting wrapper for handle.
- GameDataStore knows how to return FxInfo * based on an effect name.
- IndexedStringPacker::addString returns the id of the added string
- Use a slightly more descriptive enums for FX related flags
- a small fix for potential crash when target_idx does not map to a correct entity in process_replacement_strings

TODO:
- expose relevant FXSystem namespace members to LUA
- hide NetFx functions from LUA
- generate NetFx from active FXSystem entries,?attach based on visibility/distance?,
- LUA api documentation

--- a/Projects/CoX/Common/Runtime/CMakeLists.txt
+++ b/Projects/CoX/Common/Runtime/CMakeLists.txt
@@ -11,6 +11,8 @@ set(COMMON_RUNTIME_SRC
     SceneGraph.cpp
     Texture.cpp
     Texture.h
+    Systems/FXSystem.cpp
+    Systems/FXSystem.h
 )
 add_library(common_runtime STATIC ${COMMON_RUNTIME_SRC})
 add_dependencies(common_runtime gameData)
