--- a/Projects/CoX/Clients/Client/CMakeLists.txt
+++ b/Projects/CoX/Clients/Client/CMakeLists.txt
@@ -18,8 +18,10 @@ IF(WIN32)
 ENDIF()
 
 # Retain directory structure in visual studio
-get_target_property(TARGET_SOURCES qml_dummy SOURCES) 
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+get_target_property(TARGET_SOURCES qml_dummy SOURCES)
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES})
 set_target_properties (qml_dummy PROPERTIES
     FOLDER Projects/CoX/Clients
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
 )
