[skip ci] database extensions in default template and code formatting

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -30,13 +30,13 @@ config_version     = 1
 AccountDatabase\db_driver   = QSQLITE
 AccountDatabase\db_host     = 127.0.0.1
 AccountDatabase\db_port     = 5432
-AccountDatabase\db_name     = segs
+AccountDatabase\db_name     = segs.db
 AccountDatabase\db_user     = segsadmin
 AccountDatabase\db_pass     = segs123
 CharacterDatabase\db_driver = QSQLITE
 CharacterDatabase\db_host   = 127.0.0.1
 CharacterDatabase\db_port   = 5432
-CharacterDatabase\db_name   = segs_game
+CharacterDatabase\db_name   = segs_game.db
 CharacterDatabase\db_user   = segsadmin
 CharacterDatabase\db_pass   = segs123
 
