Small bug fixes for MOTD and AutoAFK. Added logAFK

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -75,7 +75,7 @@ listen_addr             = 127.0.0.1:7003
 location_addr           = 127.0.0.1:7003
 maps                    = DefaultMapInstances
 player_fade_in          = 380.0
-motd_timer              = 120.0
+motd_timer              = 3600.0
 costume_slot_unlocks    = "19, 29, 39, 49"
 
 [AFKSettings]
@@ -132,3 +132,4 @@ log_scenegraph      = false
 log_stores          = false
 log_tasks           = false
 log_rpc             = false
+log_afk             = false
