--- a/Projects/CoX/Common/AuthProtocol/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/UnitTests/CMakeLists.txt
@@ -13,6 +13,4 @@ target_link_libraries(AuthEventRegistry
 )
 
 set_target_properties (AuthEventRegistry PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
-)
+    RUNTIME_OUTPUT_DIRECTORY   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests)
