Attempt at fixing SEGSAdmin deployqt issues for Win/Mac

--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -60,6 +60,11 @@ IF(WIN32)
     include(Windeployqt)
     windeployqt(segs_server deploy)
 ENDIF()
+if(APPLE)
+    include(Macdeployqt)
+    macdeployqt(segs_server deploy)
+endif()
+
 # Retain directory structure in visual studio
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${target_CPP} ${target_INCLUDE} ${authserver_standaloneSRCS}) 
 set_target_properties (Auth PROPERTIES
