--- a/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
+++ b/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
@@ -30,3 +30,7 @@ IF(WIN32)
     include(Windeployqt)
     windeployqt(AuthExerciser deploy)
 ENDIF()
+if(APPLE)
+    include(Macdeployqt)
+    macdeployqt(AuthExerciser deploy)
+endif()
