--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -43,11 +43,19 @@ set(SEGSADMIN_SOURCES
     SelectScriptDialog.ui
     SyntaxHighlighter.cpp
     SyntaxHighlighter.h
-
-
 )
 add_executable(SEGSAdmin WIN32 ${SEGSADMIN_SOURCES})
 target_link_libraries(SEGSAdmin PUBLIC SEGS_Components Qt5::Core Qt5::Widgets Qt5::Network)
+
+IF(WIN32)
+    include(Windeployqt)
+    windeployqt(SEGSAdmin deploy)
+ENDIF()
+if(APPLE)
+    include(Macdeployqt)
+    macdeployqt(SEGSAdmin deploy)
+endif()
+
 # Retain directory structure in visual studio
 get_target_property(TARGET_SOURCES SEGSAdmin SOURCES) 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
