--- a/Projects/CoX/Utilities/dbtool/CMakeLists.txt
+++ b/Projects/CoX/Utilities/dbtool/CMakeLists.txt
@@ -29,6 +29,17 @@ set(tool_SRC
 add_executable(dbtool ${tool_SRC})
 target_link_libraries(dbtool Qt5::Core Qt5::Sql)
 target_link_libraries(dbtool SEGS_Components)
+
+# dbtool relies on QT more now, so we need these for windows builds
+IF(WIN32)
+    include(Windeployqt)
+    windeployqt(SEGSAdmin deploy)
+ENDIF()
+if(APPLE)
+    include(Macdeployqt)
+    macdeployqt(SEGSAdmin deploy)
+endif()
+
 # Retain directory structure in visual studio
 get_target_property(TARGET_SOURCES dbtool SOURCES) 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
