Correcting bad merge conflict on CoX/Cmake

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -114,7 +114,9 @@ log_chat            = false
 log_infomsg         = false
 log_emotes          = true
 log_target          = false
-log_spawn           = false
+log_charsel         = false
+log_playerspawn     = false
+log_npcspawn        = false
 log_mapevents       = true
 log_mapxfers        = false
 log_slashcommand    = true
