--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -34,20 +34,20 @@ set(MAPNAMES
     )
 
 foreach(MAPDIR ${MAPNAMES})
-    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/entities.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
-    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/locations.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
-    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/plaques.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
-    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/missions.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
-    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/contacts.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/${MAPDIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/entities.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/${MAPDIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/locations.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/${MAPDIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/plaques.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/${MAPDIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/missions.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/${MAPDIR})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/${MAPDIR}/contacts.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/${MAPDIR})
 endforeach(MAPDIR)
 
 #Outbreak
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_00_01/luaBot.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/City_00_01)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_00_01/luaBot.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/City_00_01)
 
 #Atlas Park
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_01_01/luaBot.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/City_01_01)
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_01_01/hideAndSeek.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/City_01_01)
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_01_01/relayRace.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DefaultMapInstances/City_01_01)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_01_01/luaBot.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/City_01_01)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_01_01/hideAndSeek.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/City_01_01)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/City_01_01/relayRace.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/maps/City_01_01)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings_template.cfg ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default_setup/settings_template.cfg COPYONLY)
 
