Logging category added
"Connection" category now added to logging types, however, this is not yet capturing the reasons for reaped links.

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -133,3 +133,4 @@ log_stores          = false
 log_tasks           = false
 log_rpc             = false
 log_afk             = false
+log_connection      = false
