--- a/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
+++ b/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
@@ -26,11 +26,11 @@ install(TARGETS AuthExerciser
 if(MINGW)
     target_link_libraries(AuthExerciser PUBLIC ws2_32)
 endif()
+
 IF(WIN32)
     include(Windeployqt)
     windeployqt(AuthExerciser deploy)
-ENDIF()
-if(APPLE)
+ELSEIF(APPLE)
     include(Macdeployqt)
     macdeployqt(AuthExerciser deploy)
-endif()
+ENDIF()
