--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -24,7 +24,7 @@
 ##############################################################
 
 [MetaData]
-config_version     = 1
+config_version     = 2
 
 [AdminServer]
 AccountDatabase\db_driver   = QSQLITE
@@ -96,6 +96,9 @@ uses_xp_mod        = false
 xp_mod_multiplier  = 2
 xp_mod_startdate   = 1/1/2000 12:00 AM
 xp_mod_enddate     = 1/1/2000 12:00 AM
+
+[Experimental]
+world_update_ticks_per_sec = 30
 
 [Logging]
 combine_logs        = false
